--- a/LuxoftC++Light.vcxproj.filters
+++ b/LuxoftC++Light.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="TrafficLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
