--- a/LuxoftC++Light.vcxproj.filters
+++ b/LuxoftC++Light.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="TrafficLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UserInputCheck.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TrafficLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UserInputCheck.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
